Bug 355497 - Kmail 5.0.2: Message Import only imports empty folders
Summary: Kmail 5.0.2: Message Import only imports empty folders
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-17 14:46 UTC by joachim
Modified: 2016-02-24 14:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1
Sentry Crash Report:


Attachments
Import Wizard (104.14 KB, image/png)
2015-11-17 16:03 UTC, joachim
Details
archiv.tar (10.00 KB, application/x-tar)
2015-11-19 14:05 UTC, matthiasweimar
Details
attachment-1988-0.html (5.06 KB, text/html)
2016-02-24 14:14 UTC, areig
Details
skype.png (1.58 KB, image/png)
2016-02-24 14:14 UTC, areig
Details
facebook.png (1.19 KB, image/png)
2016-02-24 14:14 UTC, areig
Details
twitter.png (1.19 KB, image/png)
2016-02-24 14:14 UTC, areig
Details
linkedin.png (1.18 KB, image/png)
2016-02-24 14:14 UTC, areig
Details
whatsapp.png (1.13 KB, image/png)
2016-02-24 14:14 UTC, areig
Details

Note You need to log in before you can comment on or make changes to this bug.
Description joachim 2015-11-17 14:46:12 UTC
Both Import wizards in KMail 5.0.2 (Kubuntu 15.10) import only empty folders when I try to import Messages from Thunderbird or from mbox-FIles. The wizard completes and creates all the neccessary folders but the folders are empty.

Reproducible: Always

Steps to Reproduce:
1. (Optional) export Mails from Thunderbird in to mbox-files.
2. Try one of the import wizards in KMail.


Actual Results:  
A list of emtpy Mail-Folders

Expected Results:  
All mails imported

This is my first bug report for KDE, if additional information or logs are needed, please comment.
Comment 1 Laurent Montel 2015-11-17 15:45:51 UTC
When you import message in importwizard do you see if it imports them ?
Do you see info in importwizard ?
Comment 2 joachim 2015-11-17 16:03:05 UTC
Created attachment 95564 [details]
Import Wizard
Comment 3 joachim 2015-11-17 16:03:43 UTC
This is the window of the Import wizard during import.
Comment 4 Laurent Montel 2015-11-18 06:45:38 UTC
How do you export your mbox file ?
Comment 5 joachim 2015-11-18 12:23:58 UTC
I exported it using the "Import/Export-Tools" add-on for Thunderbird.
Comment 6 joachim 2015-11-18 12:26:17 UTC
Can I get Kmail to write a log about the import process that might show the error?
Comment 7 Laurent Montel 2015-11-18 12:44:12 UTC
I exported it using the "Import/Export-Tools" add-on for Thunderbird.(In reply to joachim from comment #5)

Ok I will test it.
Comment 8 joachim 2015-11-18 12:53:16 UTC
But importing from the Thunderbird folders directly also didn't work.
Comment 9 Laurent Montel 2015-11-19 06:26:23 UTC
Could you give me name of export/export tools ?

Can you try importwizard ?
Comment 10 joachim 2015-11-19 07:57:39 UTC
The Add-On for Thunderbird can be found here: https://addons.mozilla.org/de/thunderbird/addon/importexporttools/

I tried importing from Thunderbird directly and from an exported mbox-file using the wizard under (retranslated names since I am using a German interface) "Files" -> "Import Messages" and from "Tools" -> "Import-Assistant/Wizard".
Comment 11 tuxnix 2015-11-19 12:03:45 UTC
I tried to import e-mails by the 'pim-import-werkzeug' from kmail.
Here I used the option 'Importieren von E-Mails und Ordnerlisten aus Kmail'
(import folders from kmail).
It is the same behavior discribed in this bug-report.
Just only folders are imported. No E-mail at all.
Comment 12 Laurent Montel 2015-11-19 12:24:51 UTC
Is it possible to provide me (even in private) a tarball about some folders ? (spam and co it's not a problem for me. I need to test to import theses directory/files created by this addons)
Comment 13 matthiasweimar 2015-11-19 14:05:51 UTC
Created attachment 95599 [details]
archiv.tar

Hello Laurent,
thank you for beeing so fast.

I made a test folder for you.
I ceatet a folder 'Test' in 'kmail in the local folders' and put your e-mail 
in it.
Then I copied the folder ~/.local/share/local-mail/Test to ~/ and made a tar 
archive.


When I try to import that Folder with 'pim-import-tool' with option 'import E-
Mails and folders from kmail' a new folder 'kmail-import' apeers but your e-
mail is not imported.

Thank you
Matthias Weimar
 


Am Thursday 19 November 2015, 12:24:51 schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=355497
> 
> --- Comment #12 from Laurent Montel <montel@kde.org> ---
> Is it possible to provide me (even in private) a tarball about some folders
> ? (spam and co it's not a problem for me. I need to test to import theses
> directory/files created by this addons)
Comment 14 Laurent Montel 2015-11-19 14:59:23 UTC
(In reply to matthiasweimar from comment #13)
> Created attachment 95599 [details]
> archiv.tar
> 
> Hello Laurent,
> thank you for beeing so fast.
> 
> I made a test folder for you.
> I ceatet a folder 'Test' in 'kmail in the local folders' and put your e-mail 
> in it.
> Then I copied the folder ~/.local/share/local-mail/Test to ~/ and made a tar 
> archive.
> 
> 
> When I try to import that Folder with 'pim-import-tool' with option 'import
> E-
> Mails and folders from kmail' a new folder 'kmail-import' apeers but your e-
> mail is not imported.
> 
> Thank you
> Matthias Weimar
>  
> 
> 
> Am Thursday 19 November 2015, 12:24:51 schrieben Sie:
> > https://bugs.kde.org/show_bug.cgi?id=355497
> > 
> > --- Comment #12 from Laurent Montel <montel@kde.org> ---
> > Is it possible to provide me (even in private) a tarball about some folders
> > ? (spam and co it's not a problem for me. I need to test to import theses
> > directory/files created by this addons)

Heu...it's mail generated from thunderbird tools ?
=> .arch extension ?
Comment 15 Laurent Montel 2015-11-21 22:53:09 UTC
Git commit 38b7ed34392c86ed8cf9ece97dafd0b86fd77009 by Montel Laurent.
Committed on 21/11/2015 at 22:52.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 355497 - Kmail 5.0.2: Message Import only imports empty folders
FIXED-IN: 5.1

M  +1    -2    mailimporter/src/filters.cpp

http://commits.kde.org/kdepim/38b7ed34392c86ed8cf9ece97dafd0b86fd77009
Comment 16 joachim 2015-11-23 18:46:00 UTC
Thank you!
Comment 17 areig 2016-02-23 18:22:16 UTC
Any work around?

Thanks a lot,
Comment 18 Laurent Montel 2016-02-24 06:00:58 UTC
(In reply to areig from comment #17)
> Any work around?
> 
> Thanks a lot,

Workaround is to install 5.1 :)
Comment 19 areig 2016-02-24 14:14:01 UTC
Created attachment 97386 [details]
attachment-1988-0.html

Laurent,

I am using kubuntu 5.10 with kmail 5.02. What is the procedure to make
the upgrade?

Thanks a lot,

El 24/02/16 a las 03:00, Laurent Montel via KDE Bugzilla escribió:
> https://bugs.kde.org/show_bug.cgi?id=355497
>
> --- Comment #18 from Laurent Montel <montel@kde.org> ---
> (In reply to areig from comment #17)
>> Any work around?
>>
>> Thanks a lot,
> Workaround is to install 5.1 :)
>
Comment 20 areig 2016-02-24 14:14:04 UTC
Created attachment 97387 [details]
skype.png
Comment 21 areig 2016-02-24 14:14:04 UTC
Created attachment 97388 [details]
facebook.png
Comment 22 areig 2016-02-24 14:14:04 UTC
Created attachment 97389 [details]
twitter.png
Comment 23 areig 2016-02-24 14:14:04 UTC
Created attachment 97390 [details]
linkedin.png
Comment 24 areig 2016-02-24 14:14:04 UTC
Created attachment 97391 [details]
whatsapp.png