Fix Bug 355497 - Kmail 5.0.2: Message Import only imports empty folders

BUG: 355497
FIXED-IN: 5.1